fix scrollbar

--- a/wwwroot/static/styles/main.css
+++ b/wwwroot/static/styles/main.css
@@ -63,9 +63,6 @@ a:hover {
     border: 3px solid transparent;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: transparent;
-}
-:hover::-webkit-scrollbar-thumb {
     background-color: #949494;
 }
 @keyframes fade-in {
